--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="saveLinks"><h1>Save Links with Preview</h1></div>
+        <div class="saveLinks"><h1>🔗 Very Temporary Links</h1></div>
         <form id="linkForm">
             <input type="url" id="linkUrl" placeholder="Enter URL" required>
             <button type="submit">Save</button>
