--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="saveLinks">🔗 Very Temporary Links</div>
+        <div class="saveLinksTitle">🔗 Very Temporary Links</div>
         <form id="linkForm">
             <input type="url" id="linkUrl" placeholder="Enter URL" required>
             <div class="buttonMenu">
             <button type="saveButton">Save</button>
             <button id="shareBtn">SHARE</button>
+            <button id="toggleDirectionBtn">E/Ш</button>
             </div>
         </form>
         <div id="linkList"></div>
