--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="saveLinksTitle">🔗 Very Temporary Links</div>
         <form id="linkForm">
             <input type="url" id="linkUrl" placeholder="Enter URL" required>
-            <div class="buttonMenu">
+            <div class="buttonMenu" id="buttonMenu">
             <button type="saveButton">Save</button>
             <button id="shareBtn">SHARE</button>
             <button id="toggleDirectionBtn">E/Ш</button>
@@ -19,6 +19,7 @@
         </form>
         <div id="linkList"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
