--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <form id="linkForm">
         <input type="url" id="linkUrl" placeholder="Enter URL" required>
         <div class="buttonMenu" id="buttonMenu">
-        <button type="saveButton">Save</button>
-        <button id="shareBtn">SHARE</button>
-        <button id="toggleDirectionBtn">E/Ш</button>
+        <button type="submit">Save</button>
+        <button type="button" id="shareBtn">SHARE</button>
+        <button type="button" id="toggleDirectionBtn">E/Ш</button>
         </div>
     </form>
     <div class="container">
