--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="buttonMenu" id="buttonMenu">
         <button type="submit">Save</button>
         <button type="button" id="shareBtn">SHARE</button>
-        <button type="button" id="toggleDirectionBtn">E/Ш</button>
+        <button type="button" id="toggleDirectionBtn">👁️</button>
         </div>
     </form>
     <div class="container">
