--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         </div>
     </form>
     <div class="container">
+        <div class="titleContainer ">
         <div class="saveLinksTitle">🔗 Very Temporary Links</div>
+        <div class="infoInfo">ⓘ</div>
+       </div>
         <div id="linkList"></div>
     </div>
     
