--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="titleContainer ">
         <div class="saveLinksTitle">🔗 Very Temporary Links</div>
         <div class="infoInfo">ⓘ<div class="tooltip">
-            <h1>This service was created to make life easier for those who use and exchange a lot of links.<h1></h1><br><br><br>
+            <h2>This service was created to make life easier for those who use and exchange a lot of links.</h2><br><br><br>
 1. You can easily compile references and transfer them to designers or other project performers.<br><br>
 2. Instead of hundreds of open links in the browser, you can accumulate them in one tab, and this will not use a large amount of resources.<br><br>
 3. Your selection of links is stored only locally on your computer and is not synchronized with any services.<br><br>
