--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form id="linkForm">
         <input type="url" id="linkUrl" placeholder="Enter URL" required>
         <div class="buttonMenu" id="buttonMenu">
-        <button type="submit">Save</button>
+        <button type="submit" id="saveButton">Save</button>
         <button type="button" id="shareBtn">SHARE</button>
         <button type="button" id="toggleDirectionBtn">👁️</button>
         </div>
