--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔗 Very Temporary Links</title>
+    <title>🔗 Temporary Links | Convenient Link Collection Service</title>
+    <meta name="description" content="Use our service for convenient collection and sharing of temporary links. Easily save and share links.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <form id="linkForm">
-        <input type="url" id="linkUrl" placeholder="Enter URL" required>
+        <input type="url" id="linkUrl" placeholder="Enter the URLs you want to collect in one place" required>
         <div class="buttonMenu" id="buttonMenu">
-        <button type="submit" id="saveButton">Save</button>
-        <button type="button" id="shareBtn">SHARE</button>
-        <button type="button" id="toggleDirectionBtn">👁️</button>
+            <button type="submit" id="saveButton">Save</button>
+            <button type="button" id="shareBtn">Share</button>
+            <button type="button" id="toggleDirectionBtn">Toggle</button>
         </div>
     </form>
     <div class="container">
-        <div class="titleContainer ">
-        <div class="saveLinksTitle">🔗 Very Temporary Links</div>
-        <div class="infoInfo">ⓘ<div class="tooltip">
-            <h2>This service was created to make life easier for those who use and exchange a lot of links.</h2><br><br><br>
-1. You can easily compile references and transfer them to designers or other project performers.<br><br>
-2. Instead of hundreds of open links in the browser, you can accumulate them in one tab, and this will not use a large amount of resources.<br><br>
-3. Your selection of links is stored only locally on your computer and is not synchronized with any services.<br><br>
-4. ????<br><br>
-5. PROFIT!!!!101010101010<br><br>
-        </div></div>
-       </div>
+        <div class="titleContainer">
+            <div class="saveLinksTitle">🔗 Temporary Links</div>
+            <div class="infoInfo">ⓘ<div class="tooltip">
+                <h2>This service was created to make life easier for those who use and exchange a lot of links.</h2><br><br><br>
+                1. You can easily compile references and transfer them to designers or other project performers.<br><br>
+                2. Instead of hundreds of open links in the browser, you can accumulate them in one tab, and this will not use a large amount of resources.<br><br>
+                3. Your selection of links is stored only locally on your computer and is not synchronized with any services.<br><br>
+                4. ????<br><br>
+                5. PROFIT!!!!101010101010<br><br>
+            </div></div>
+        </div>
         <div id="linkList"></div>
     </div>
-    
     <script src="script.js"></script>
 </body>
 </html>
