--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="buttonMenu" id="buttonMenu">
             <button type="submit" id="saveButton">Save</button>
             <button type="button" id="shareBtn">Share</button>
-            <button type="button" id="toggleDirectionBtn">Toggle</button>
+            <button type="button" id="toggleDirectionBtn">👁️</button>
         </div>
     </form>
     <div class="container">
