--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </form>
     <div class="container">
         <div class="titleContainer">
-            <div class="saveLinksTitle">🔗 Temporary Links</div>
+            <div class="saveLinksTitle">🔗 Very Temporary Links</div>
             <div class="infoInfo">ⓘ<div class="tooltip">
                 <h2>This service was created to make life easier for those who use and exchange a lot of links.</h2><br><br><br>
                 1. You can easily compile references and transfer them to designers or other project performers.<br><br>
