--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>🔗 Temporary Links | Convenient Link Collection Service</title>
     <meta name="description" content="Use our service for convenient collection and sharing of temporary links. Easily save and share links.">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js"></script>
+    <script src="https://unpkg.com/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js"></script>
 </head>
 <body>
     <form id="linkForm">
@@ -14,6 +16,8 @@
             <button type="submit" id="saveButton">Save</button>
             <button type="button" id="shareBtn">Share</button>
             <button type="button" id="toggleDirectionBtn">👁️</button>
+            <button type="button" id="myLinksBtn">📋</button>
+            <button type="button" id="connectWalletBtn">🥷🏼</button>
         </div>
     </form>
     <div class="container">
