--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </svg>
             </button>
             <button type="button" id="toggleDirectionBtn">👁️</button>
-            <button type="button" id="myLinksBtn">📋</button>
-            <button type="button" id="connectWalletBtn">🥷🏼</button>
+            <!-- <button type="button" id="myLinksBtn">📋</button>
+            <button type="button" id="connectWalletBtn">🥷🏼</button> -->
         </div>
     </form>
 
