--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="titleContainer">
             <div class="saveLinksTitle">🔗 Very Temporary Links</div>
             <div class="infoInfo">ⓘ<div class="tooltip">
-                <h2>This service was created to make life easier for those who use and exchange a lot of links.</h2><br><br><br>
-                1. You can easily compile references and transfer them to designers or other project performers.<br><br>
-                2. Instead of hundreds of open links in the browser, you can accumulate them in one tab, and this will not use a large amount of resources.<br><br>
-                3. Your selection of links is stored only locally on your computer and is not synchronized with any services.<br><br>
+                <h2>This service was designed to simplify the process for individuals who frequently use and share numerous links:</h2><br><br><br>
+                1. You can efficiently gather references and share them with friends, team members, or save them for later use!<br><br>
+                2. Instead of managing hundreds of open links in your browser, you can consolidate them into a single tab, which conserves resources.<br><br>
+                3. Your selection of links is stored locally on your computer and is not uploaded, downloaded, stored, saved, or synchronized with any services.<br><br>
                 4. ????<br><br>
                 5. PROFIT!!!!101010101010<br><br>
             </div></div>
