--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>This service was designed to simplify the process for individuals who frequently use and share numerous links:</h2><br><br><br>
                 1. You can efficiently gather references and share them with friends, team members, or save them for later use!<br><br>
                 2. Instead of managing hundreds of open links in your browser, you can consolidate them into a single tab, which conserves resources.<br><br>
-                3. Your selection of links is stored locally on your computer and is not uploaded, downloaded, stored, saved, or synchronized with any services.<br><br>
+                3. Your selection of links is stored locally on your computer and is not uploaded, downloaded, stored, saved, or synchronized with any services until you share them.<br><br>
                 4. ????<br><br>
                 5. PROFIT!!!!101010101010<br><br>
             </div></div>
