--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </svg>
             </button>
             <button type="button" id="toggleDirectionBtn">👁️</button>
-            <!-- <button type="button" id="myLinksBtn">📋</button>
-            <button type="button" id="connectWalletBtn">🥷🏼</button> -->
+            <button type="button" id="myLinksBtn">💾</button>
+            <button type="button" id="connectWalletBtn">🥷🏼</button>
         </div>
     </form>
 
@@ -40,7 +40,8 @@
                 5. PROFIT!!!!101010101010<br><br>
             </div></div>
         </div>
-        <div id="linkList"></div>
+        <div id="linkList"></div><div id="savedPagesContainer"></div>
+
     </div>
     <script src="script.js"></script>
 </body>
