--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5S03YN610S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5S03YN610S');
+</script>
 <body>
     <form id="linkForm">
         <input type="url" id="linkUrl" placeholder="Enter the URLs you want to collect in one place" required>
@@ -44,6 +53,5 @@
 
     </div>
     <script src="script.js"></script>
-    <script src="gtag.js"></script>
 </body>
 </html>
