--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 5. PROFIT!!!!101010101010<br><br>
             </div></div>
         </div>
-        <div id="linkList"></div><div id="savedPagesContainer"></div>
-
+        <div id="linkList"></div>
+        <div id="savedPagesContainer"></div>
     </div>
     <script src="script.js"></script>
 </body>
