--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 
 <body>
     <form id="linkForm">
-        <input type="url" id="linkUrl" placeholder="Enter the URLs you want to collect in one place" required>
+        <input type="url" id="linkUrl" data-text="Enter the URLs you want to collect in one place" required>
         <div class="buttonMenu" id="buttonMenu">
             <button type="submit" id="saveButton">Add</button>
-            <button type="button" id="shareBtn"><svg id="copyIcon" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="height: 50%; width: 50%;">
-                <path d="m6 19v2c0 .621.52 1 1 1h2v-1.5h-1.5v-1.5zm7.5 3h-3.5v-1.5h3.5zm4.5 0h-3.5v-1.5h3.5zm4-3h-1.5v1.5h-1.5v1.5h2c.478 0 1-.379 1-1zm-1.5-1v-3.363h1.5v3.363zm0-4.363v-3.637h1.5v3.637zm-13-3.637v3.637h-1.5v-3.637zm11.5-4v1.5h1.5v1.5h1.5v-2c0-.478-.379-1-1-1zm-10 0h-2c-.62 0-1 .519-1 1v2h1.5v-1.5h1.5zm4.5 1.5h-3.5v-1.5h3.5zm3-1.5v-2.5h-13v13h2.5v-1.863h1.5v3.363h-4.5c-.48 0-1-.379-1-1v-14c0-.481.38-1 1-1h14c.621 0 1 .522 1 1v4.5h-3.5v-1.5z" fill="white"/>
-            </svg>
+            <button type="button" id="shareBtn">
+                <svg id="copyIcon" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="height: 50%; width: 50%;">
+                    <path d="m6 19v2c0 .621.52 1 1 1h2v-1.5h-1.5v-1.5zm7.5 3h-3.5v-1.5h3.5zm4.5 0h-3.5v-1.5h3.5zm4-3h-1.5v1.5h-1.5v1.5h2c.478 0 1-.379 1-1zm-1.5-1v-3.363h1.5v3.363zm0-4.363v-3.637h1.5v3.637zm-13-3.637v3.637h-1.5v-3.637zm11.5-4v1.5h1.5v1.5h1.5v-2c0-.478-.379-1-1-1zm-10 0h-2c-.62 0-1 .519-1 1v2h1.5v-1.5h1.5zm4.5 1.5h-3.5v-1.5h3.5zm3-1.5v-2.5h-13v13h2.5v-1.863h1.5v3.363h-4.5c-.48 0-1-.379-1-1v-14c0-.481.38-1 1-1h14c.621 0 1 .522 1 1v4.5h-3.5v-1.5z" fill="white"/>
+                </svg>
             </button>
             <button type="button" id="toggleDirectionBtn">👁️</button>
             <button type="button" id="myLinksBtn">💾</button>
@@ -42,14 +43,16 @@
     <div class="container">
         <div class="titleContainer">
             <div class="saveLinksTitle">🔗 Very Temporary Links</div>
-            <div class="infoInfo">ⓘ<div class="tooltip">
-                <h2>This service was designed to simplify the process for individuals who frequently use and share numerous links:</h2><br><br><br>
-                1. You can efficiently gather references and share them with friends, team members, or save them for later use!<br><br>
-                2. Instead of managing hundreds of open links in your browser, you can consolidate them into a single tab, which conserves resources.<br><br>
-                3. Your selection of links is stored locally on your computer and is not uploaded, downloaded, stored, saved, or synchronized with any services until you share them.<br><br>
-                4. ????<br><br>
-                5. PROFIT!!!!101010101010<br><br>
-            </div></div>
+            <div class="infoInfo">ⓘ
+                <div class="tooltip">
+                    <h2>This service was designed to simplify the process for individuals who frequently use and share numerous links:</h2><br><br><br>
+                    1. You can efficiently gather references and share them with friends, team members, or save them for later use!<br><br>
+                    2. Instead of managing hundreds of open links in your browser, you can consolidate them into a single tab, which conserves resources.<br><br>
+                    3. Your selection of links is stored locally on your computer and is not uploaded, downloaded, stored, saved, or synchronized with any services until you share them.<br><br>
+                    4. ????<br><br>
+                    5. PROFIT!!!!101010101010<br><br>
+                </div>
+            </div>
         </div>
         <div id="linkList"></div>
         <div id="savedPagesContainer"></div>
