--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <button type="button" id="myLinksBtn">💾</button>
             <button type="button" id="connectWalletBtn">🥷🏼</button>
         </div>
+        <div id="generatedLinkContainer" class="hidden">
+            <input type="text" id="generatedLink" readonly>
+            <button id="copyLinkBtn">Copy</button>
+        </div>
     </form>
 
     <div class="container">
