--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
         </div>
-        <div id="linkList"></div>
+        <div id="linkList" class="grid-layout"></div>
         <div id="savedPagesContainer"></div>
     </div>
     <script src="script.js"></script>
