--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
+    <script src="bg.js"></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -25,26 +26,21 @@
 </script>
 
 <body>
+    <canvas class="screen"></canvas>
     <form id="linkForm">
         <input type="url" id="linkUrl" data-text="Enter the URLs you want to collect in one place" required>
         <div class="buttonMenu" id="buttonMenu">
             <button type="submit" id="saveButton">Add</button>
             <button type="button" id="shareBtn">Share</button>
-
-
             <button type="button" id="toggleDirectionBtn">
-                
                 <script src="https://cdn.lordicon.com/lordicon.js"></script>
                 <lord-icon
                     src="https://cdn.lordicon.com/vfczflna.json"
                     trigger="click"
                     stroke="bold"
                     colors="primary:#00ff3c,secondary:#00ff3c"
-                    style="width:100%;height:150%;top:-25%;">
-                </lord-icon>
+                    style="width:100%;height:150%;top:-25%;"></lord-icon>
             </button>
-
-
             <button type="button" id="myLinksBtn">+</button>
             <button type="button" id="connectWalletBtn">🥷🏼</button>
         </div>
