--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
     <script src="bg.js"></script>
+    <script src="draw.js" defer></script>
 </head>
 
 <!-- Google tag (gtag.js) -->
