--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔗 Temporary Links | Convenient Link Collection Service</title>
+    <title>Temporary Links | Convenient Link Collection Service</title>
     <meta name="description" content="Use our service for convenient collection and sharing of temporary links. Easily save and share links.">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js"></script>
