--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         <div id="linkList"></div>
         <div id="savedPagesContainer"></div>
     </div>
+
+    <div class="credit-container">
+        <a href="https://x.com/wadadawadada" target="_blank">created by w3dada</a>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
