--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div id="savedPagesContainer"></div>
     </div>
 
-    <div class="credit-container">
+    <!-- <div class="credit-container">
         <a href="https://x.com/wadadawadada" target="_blank">created by w3dada</a>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 </body>
