--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <div id="savedPagesContainer"></div>
     </div>
 
-    <!-- <div class="credit-container">
-        <a href="https://x.com/wadadawadada" target="_blank">created by w3dada</a>
-    </div> -->
+    <div class="credit-container">
+        <a href="https://numen.space" target="_blank">created by numen</a>
+    </div>
 
     <script src="script.js"></script>
 </body>
