--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <div class="credit-container">
-        <a href="https://x.com/wadadawadada" target="_blank">created by w3dada</a>
+        <a href="https://numen.space" target="_blank">created by numen</a>
     </div>
 
     <script src="script.js"></script>
