--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
                     style="width:100%;height:150%;top:-25%;"></lord-icon>
             </button>
             <button type="button" id="myLinksBtn">+</button>
-            <button type="button" id="connectWalletBtn">🥷🏼</button>
+            <button type="button" id="connectWalletBtn">
+                <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon
+    src="https://cdn.lordicon.com/ciawvzjk.json"
+    trigger="hover"
+    colors="primary:#00fc11"
+    style="width:100%;height:150%;top:-25%;">
+    </lord-icon>
+            </button>
         </div>
         <div id="generatedLinkContainer" class="hidden">
             <input type="text" id="generatedLink" readonly>
