--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="container">
          <div class="titleContainer" id="titleContainer">
-            <div class="saveLinksTitle">🔗 Very Temporary Links<div class="infoInfo">ⓘ
+            <div class="saveLinksTitle">🔗 0link<div class="infoInfo">ⓘ
                 <div class="tooltip">
                     <h2>This service was designed to simplify the process for individuals who frequently use and share numerous links:</h2><br><br><br>
                     1. You can efficiently gather references and share them with friends, team members, or save them for later use!<br><br>
