--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     colors="primary:#00ff3c,secondary:#00ff3c"
                     style="width:100%;height:150%;top:-25%;"></lord-icon>
             </button>
-            <button type="button" id="myLinksBtn" title="Create folder">+</button>
+            <button type="button" id="myLinksBtn" title="Save state as folder">+</button>
             <button type="button" id="connectWalletBtn" title="Connect MetaMask">
                 <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <lord-icon
