--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input type="url" id="linkUrl" data-text="Enter the URLs you want to collect in one place" required>
         <div class="buttonMenu" id="buttonMenu">
             <button type="submit" id="saveButton">Add</button>
-            <button type="button" id="shareBtn">Share</button>
+            <button type="button" id="shareBtn" title="Share state via IPFS">Share</button>
             <button type="button" id="toggleDirectionBtn" title="Toggle view">
                 <script src="https://cdn.lordicon.com/lordicon.js"></script>
                 <lord-icon
