--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="/js/drawing.js" defer></script>
     <script src="/js/main.js" defer></script>
     <script src="/js/utils.js" defer></script>
+    <script src="/chat/chat.js" defer></script>
 </head>
 <body>
     <canvas class="screen"></canvas>
