--- a/index.html
+++ b/index.html
@@ -97,5 +97,16 @@
     </div>
 
     <div id="walletAddress"></div>
+
+    <!-- Chat Button -->
+    <div id="chatButton" class="chat-button">💬</div>
+
+    <!-- Chat Modal -->
+    <div id="chatModal" class="chat-modal hidden">
+        <div class="chat-modal-content">
+            <span id="closeChatModal" class="close-chat-modal">&times;</span>
+            <iframe src="https://m00nchat.netlify.app/#container" style="width:100%; height:100%; border:none; background-color: #00000074;"></iframe>
+        </div>
+    </div>
 </body>
 </html>
