--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </button>
         </div>
         <div id="onlineButtonsContainer" class="hidden">
-            <button type="button" id="saveOnlineBtn" class="hidden" title="Save to IPFS">Save ↥</button>
-            <button type="button" id="loadOnlineBtn" class="hidden" title="Load from IPFS">Load ↧</button>
+            <button type="button" id="saveOnlineBtn" class="hidden" title="Save to IPFS">↥ Save</button>
+            <button type="button" id="loadOnlineBtn" class="hidden" title="Load from IPFS">↧ Load</button>
         </div>
         
     </form>
