--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
     <div id="walletAddress"></div>
 
     <!-- Chat Button -->
-    <div id="chatButton" class="chat-button">💬</div>
+    <div id="chatButton" class="chat-button"><img src="img/chat.svg" alt="Chat Button"></div>
 
     <!-- Chat Modal -->
     <div id="chatModal" class="chat-modal hidden">
         <div class="chat-modal-content">
             <span id="closeChatModal" class="close-chat-modal">&times;</span>
-            <iframe src="https://m00nchat.netlify.app/#container" style="width:100%; height:100%; border:none; background-color: #00000074;"></iframe>
+            <iframe src="https://m00nchat.netlify.app/#container" class="chat-modal-main"></iframe>
         </div>
     </div>
 </body>
