--- a/chat/index.html
+++ b/chat/index.html
@@ -16,8 +16,8 @@
             <span>M</span><span id="moonPhase"></span><span>O</span><span></span><span>N</span><span>&nbsp&nbsp</span><span>C</span><span>H</span><span>A</span><span>T</span>
         </div>
         <div id="nicknameContainer">
-            <input type="text" id="nicknameInput" placeholder="Enter your nickname">
-            <div id="usersOnline">Users online: <span id="userCount">1</span></div>
+            <input type="text" id="nicknameInput" placeholder="Enter nickname">
+            <div id="usersOnline">Users: <span id="userCount">1</span></div>
             <div id="status">
                 <div id="connectionStatus">
                     <span id="statusIndicator" class="disconnected"></span>
@@ -29,9 +29,9 @@
         <textarea id="messageInput" placeholder="Type a message"></textarea>
         <button id="sendButton">Send</button>
         <div id="linkContainer">
-            <strong>Chat Link:</strong>
+           Chat Link:&nbsp
             <div id="chatLink"></div>
-            <button id="copyLinkButton">Copy</button>
+            <button id="copyLinkButton">❏</button>
         </div>
     </div>
     <script src="chat.js"></script>
