--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="Permissions-Policy" content="clipboard-read=*, clipboard-write=*">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temporary Links | Convenient Link Collection Service</title>
@@ -14,8 +15,11 @@
     <link rel="manifest" href="/favicon/site.webmanifest">
     <script src="/js/bg.js"></script>
     <script src="/js/drawing.js" defer></script>
-    <script src="/js/main.js" defer></script>
+    <script src="/js/main1.js" defer></script>
+    <script src="/js/main2.js" defer></script>
+    <script src="/js/main3.js" defer></script>
     <script src="/js/utils.js" defer></script>
+    <script src="/js/local_chat.js" defer></script>
 </head>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5S03YN610S"></script>
@@ -105,7 +109,7 @@
     <div id="chatModal" class="chat-modal hidden">
         <div class="chat-modal-content">
             <span id="closeChatModal" class="close-chat-modal">&times;</span>
-            <iframe src="https://m00nchat.netlify.app/#container" class="chat-modal-main"></iframe>
+            <iframe src="/chat/" class="chat-modal-main"></iframe>
         </div>
     </div>
 </body>
