--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="chatModal" class="chat-modal hidden">
         <div class="chat-modal-content">
             <span id="closeChatModal" class="close-chat-modal">&times;</span>
-            <iframe src="/chat/" class="chat-modal-main"></iframe>
+            <iframe src="https://m00nchat.netlify.app/#container" class="chat-modal-main"></iframe>
         </div>
     </div>
 </body>
