--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <script src="/js/main2.js" defer></script>
     <script src="/js/main3.js" defer></script>
     <script src="/js/utils.js" defer></script>
-    <script src="/js/local_chat.js" defer></script>
 </head>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5S03YN610S"></script>
@@ -109,7 +108,8 @@
     <div id="chatModal" class="chat-modal hidden">
         <div class="chat-modal-content">
             <span id="closeChatModal" class="close-chat-modal">&times;</span>
-            <iframe src="https://m00nchat.netlify.app/#container" class="chat-modal-main"></iframe>
+            <!-- <iframe src="https://m00nchat.netlify.app/#container" class="chat-modal-main"></iframe> -->
+            <div id="chatIframeContainer" class="chat-modal-main"></div>
         </div>
     </div>
 </body>
