--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="credit-container">
-        <a href="https://numen.space" target="_blank">created by numen</a>
+        <a href="https://wadada.cool" target="_blank">created by w3dada</a>
     </div>
 
     <div id="walletAddress"></div>
